# crawler_smcw

./: SMC_World_mysql06.rar  crawler.py  credentials.py  pyproject.toml  readme.md  requirements.txt
app/: database.py  db_credentials.py  main.py  models.py  schemas.py  services.py
app/routers/: category.py  product.py
scripts/: by_industry_and_process.py  by_industry_and_process_methods.py  product_list.py  product_list_methods.py
